remove explict font and fixed overflow on dropdown

--- a/styles/components/shared/tokenpicker.module.css
+++ b/styles/components/shared/tokenpicker.module.css
@@ -91,8 +91,9 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     z-index: 5;
     width: 140px;
-    height: 242px;
-
+    min-height: 141px;
+    height: 100%;
+    overflow: auto;
 }
 
 .tokenDropdownContainer span {
